--- a/src/app/foundation-styles/index.css
+++ b/src/app/foundation-styles/index.css
@@ -3,7 +3,8 @@
 /* Import all style modules */
 @import "./base.css";
 @import "./typography.css";
-@import "./center-content.css";
-@import "./overview-mode.css";
 @import "./responsive.css";
 @import "./text-content.css";
+@import "../ui/center/center.css";
+@import "../ui/overview/overview.css";
+@import "../ui/help/help.css";
